--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
 
 .btn-control {
     position: fixed;
-    bottom: 0;
+    bottom: 10px;
     left: 50%;
     transform: translateX(-50%);
     width: 99%;
