--- a/docs/style.css
+++ b/docs/style.css
@@ -58,6 +58,7 @@ body {
     cursor: pointer;
     border: 2px solid rgba(128, 128, 128, 0.5);
     transition: color 1.5s;
+    z-index: 2;
 }
 
 .currently-playing {
