--- a/docs/style.css
+++ b/docs/style.css
@@ -33,12 +33,18 @@ body {
 }
 
 .container {
-    margin-top: 100px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    min-height: 100vh;
     margin-left: 50px;
+    margin-right: 50px;
+    /* padding-bottom: 65px; */
 }
 
 #buttons {
-    position: relative;
+    /* position: relative; */
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -67,11 +73,12 @@ body {
 }
 
 .btn-control {
-    position: fixed;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 99%;
+    /* position: absolute; */
+    /* position: fixed; */
+    /* bottom: 10px; */
+    /* left: 50%;
+    transform: translateX(-50%); */
+    width: 100%;
     background-color: rgba(0,0,0,0.1);
     color: rgba(255, 255, 255, 0.8);
     border-radius: 5px;
@@ -134,13 +141,21 @@ body {
     }
 
     .container {
-        margin: 50px auto 0 auto;
+        margin: 50px auto 50px auto;
     }
 
     #buttons {
         justify-content: center;
         align-items: center;
         flex-wrap: nowrap;
+    }
+
+    .btn-control {
+        width: 80%;
+        right: 0;
+        left: 0;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
