--- a/docs/style.css
+++ b/docs/style.css
@@ -118,6 +118,10 @@ body {
     animation-iteration-count: infinite;
 }
 
+label {
+    color: white;
+}
+
 @keyframes spinning {
     0% {transform: rotate(0deg); color: black;}
     25%{transform: rotate(144deg); color: white;}
